# mon-projet

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
tests/: test_core.py
